--- a/setup.cfg
+++ b/setup.cfg
@@ -6,11 +6,13 @@ long_description = file: README.rst
 url = https://www.example.com/
 author = Andeh
 author_email = andy@andeh.tech
+license = BSD-3-Clause
 classifiers =
     Environment :: Web Environment
     Framework :: Django
     Framework :: Django :: 4.0.4
     Intended Audience :: Developers
+    License :: OSI Approved :: BSD License
     Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3
